--- a/betfair_analysis.ipynb
+++ b/betfair_analysis.ipynb
@@ -4,12 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Betfair Historical Data Visualisation\n",
     "Begin by importing some packages that we'll need later."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +22,7 @@
     "import glob2 as glob                        # To scan across folders looking for data files.\n",
     "import json                                 # To decode Betfair data.\n",
     "from pyspark.sql.types import *             # For authoring the RDD schema.\n",
-    "import time\n",
+    "import time                                 # For time string conversion.\n",
     "import matplotlib.pyplot as pyplot          # For plotting graphs."
    ]
   },
@@ -203,7 +204,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, using this schema, we can create the DataFrame from the RDD - and have a look at the DataFrame schema to check that it looks OK. And let's also take a look at the start of 1 row in it."
+    "Now, using this schema, we can create the DataFrame from the RDD, and print the DataFrame schema to check that it looks OK. Let's also take a look at the start of 1 row in it."
    ]
   },
   {
@@ -413,8 +414,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's chop the data set down to a single event and betting market, by making new DataFrames that select one market and event. This is going to be relatively small number of rows, so it's OK to do a `collect()`.\n",
-    "Nonetheless, it takes about 10 mins on my PC. You can monitor progress here <http://localhost:4040/jobs/>."
+    "Let's chop the data set down to a single event and betting market by making new DataFrames that select one market and event.<br>\n",
+    "To see a list of possible events and markets you can use this code, which prints a list sorted by number of market changes (descending),\n",
+    "~~~\n",
+    "most_changes = runners.join(runner_changes, runners.runner_id == runner_changes.runner_id).select(\n",
+    "                        runners.market_id,\n",
+    "                        runners.event_name,\n",
+    "                        runners.market_name,\n",
+    "                        runner_changes.published_time,\n",
+    "                        runner_changes.runner_id).groupBy('market_id',\n",
+    "                                                          'event_name', \n",
+    "                                                          'market_name').count().orderBy(['count'], ascending=False).collect()\n",
+    "\n",
+    "for mc in most_changes:\n",
+    "    print(mc.market_id, mc.event_name, ':', mc.market_name)\n",
+    "~~~\n",
+    "In the code below, I've selected the Challenge Cup 2018 winner market. This is going to be relatively small number of rows, so it's OK to do a `collect()`. Nonetheless, it takes about 10 mins on my PC. You can monitor progress here <http://localhost:4040/jobs/>."
    ]
   },
   {
@@ -432,7 +447,7 @@
     "                                                                'runner_id', \n",
     "                                                                'runner_name').distinct()\n",
     "\n",
-    "# Runners have a 1:many relationship to Runner Changes, so do a left-inner join from Runners to Runner Changes.\n",
+    "# Runners have a 1:many relationship to Runner Changes, so do an inner join from Runners to Runner Changes.\n",
     "chosen_runner_changes = chosen_runners.join(runner_changes, chosen_runners.runner_id == runner_changes.runner_id).select(\n",
     "                        chosen_runners.market_id, \n",
     "                        chosen_runners.event_name, \n",
@@ -448,7 +463,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define some little functions to help with data analysis and graph plotting."
+    "Define some functions to help with data analysis and graph plotting."
    ]
   },
   {
@@ -457,7 +472,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Betfair time seem to be in milliseconds, so this converts them to seconds.\n",
+    "# Betfair time seems to be in milliseconds, so this converts it to normal Unix epoch time in seconds.\n",
     "def betfair_to_epoch(betfair_time):\n",
     "    return betfair_time / 1000\n",
     "\n",
@@ -619,7 +634,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The graphs are pretty credible, as Warrington would have been favourites going into the game, but Catalans won it <https://en.wikipedia.org/wiki/2018_Challenge_Cup#Final>.<br>\n",
+    "The graphs are pretty credible, as Warrington Warriors would have been favourites going into the game, but Catalan Dragons won it <https://en.wikipedia.org/wiki/2018_Challenge_Cup#Final>.<br>\n",
     "\n",
     "Shutdown Spark."
    ]
